# Report_completion

./: .env.example  .gitignore  README.md  audit.py  infer.py  nhanes_to_medfill.py  pyproject.toml  requirements.txt  setup.py  write_data.py
Fronted_medfill/: index.html  package-lock.json  package.json  requirements.txt  tailwind.config.js
Fronted_medfill/src/: App.jsx  api.js  index.css
Fronted_medfill/src/components/: FileUpload.jsx  Navbar.jsx  PatientDashboard.jsx  PredictionPanel.jsx
ai_agents/: __init__.py  easyocr_agent.py  pipeline.py  requirements.txt  schemas.py  structuring_agent.py  vision_agent.py
api_gateway/: main.py
ml_pipeline/: encoders.py  loss.py  precompute_bert.py  predictor.py  requirements.txt  train.py
ml_pipeline/configs/: config.yaml
ml_pipeline/data/: __init__.py  dataset.py
ml_pipeline/models/: __init__.py
