[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ─────────────────────────────────────────────────────────────────────────────
[project]
name            = "medfill"
version         = "0.1.0"
description     = "ReportComplete: Smartphone-Integrated Medical Data Reconstruction via VQ-VAE"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }

authors = [
    { name = "ultra" },
]

keywords = [
    "medical", "ocr", "vq-vae", "imputation",
    "clinical-bert", "anemia", "report-classifier"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.11",
]

# ── Core dependencies (always required) ──────────────────────────────────────
dependencies = [
    # Pydantic schemas + validation
    "pydantic>=2.6.0",
    # Image processing (OCR preprocessing)
    "opencv-python-headless>=4.9.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    # Config
    "pyyaml>=6.0.1",
    # Data
    "pandas>=2.0.0",
    # Utilities
    "tqdm>=4.66.0",
]

# ─────────────────────────────────────────────────────────────────────────────
# Optional extras — install the group you need:
#
#   pip install -e ".[agents]"    →  OCR + Ollama agents
#   pip install -e ".[ml]"        →  ML training pipeline
#   pip install -e ".[api]"       →  FastAPI gateway
#   pip install -e ".[all]"       →  Everything
# ─────────────────────────────────────────────────────────────────────────────
[project.optional-dependencies]

agents = [
    # Local LLM client (Ollama must be installed separately)
    "ollama>=0.2.0",
]

ml = [
    # PyTorch — installed separately via conda/pip with CUDA flag
    # See README: pip install torch --index-url https://download.pytorch.org/whl/cu121
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    # HuggingFace (ClinicalBERT / DistilBERT)
    "transformers>=4.38.0",
    # ML extras
    "einops>=0.7.0",
    "scikit-learn>=1.3.0",
    # Logging
    "wandb>=0.16.0",
    # Config
    "omegaconf>=2.3.0",
]

api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",   # for file upload endpoints
]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

all = [
    "medfill[agents,ml,api,dev]",
]

# ─────────────────────────────────────────────────────────────────────────────
[project.scripts]
# CLI entry points after `pip install -e .`
medfill-process = "ai_agents.pipeline:main"
medfill-bert    = "ml_pipeline.precompute_bert:main"

# ─────────────────────────────────────────────────────────────────────────────
[tool.setuptools]
# Explicitly tell setuptools which directories are Python packages
packages = ["ai_agents", "ml_pipeline"]

[tool.setuptools.package-data]
# Include the YAML config alongside the Python code
"ml_pipeline" = ["configs/*.yaml"]

# ─────────────────────────────────────────────────────────────────────────────
# Linter / formatter config (optional but useful)
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]   # line too long — handled by formatter

[tool.black]
line-length    = 100
target-version = ["py311"]

[tool.mypy]
python_version         = "3.11"
ignore_missing_imports = true
warn_return_any        = false

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
